--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.38.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
